tests/a.output
Welcome to example graph program!

> 
> 
> WARNING: Node 'a' already exists

> WARNING: Node 'a' already exists

> 
> 
> WARNING: Node 'b' already exists

> WARNING: Node 'b' already exists

> 
> ERROR: weight must be in range [0, 65535]

> ERROR: failed to parse weight '-65535' as a number

> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> WARNING: edge between nodes 'a' and 'b' does not exist

> 
> WARNING: edge between nodes 'b' and 'b' does not exist

> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> WARNING: edge between nodes 'a' and 'b' does not exist

> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> ERROR: Node #1 'a' does not exist

> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> 
> ERROR: Node #2 'b' does not exist

> 
> 
> 
> ERROR: Node #1 'b' does not exist

> 
> 
> 
> src/graph.c:143:5: runtime error: applying zero offset to null pointer
SUMMARY: UndefinedBehaviorSanitizer: undefined-behavior src/graph.c:143:5 in 
src/graph.c:143:5: runtime error: null pointer passed as argument 1, which is declared to never be null
/usr/include/string.h:44:28: note: nonnull attribute specified here
SUMMARY: UndefinedBehaviorSanitizer: undefined-behavior src/graph.c:143:5 in 
src/graph.c:143:5: runtime error: null pointer passed as argument 2, which is declared to never be null
/usr/include/string.h:44:28: note: nonnull attribute specified here
SUMMARY: UndefinedBehaviorSanitizer: undefined-behavior src/graph.c:143:5 in 
src/graph.c:146:5: runtime error: null pointer passed as argument 1, which is declared to never be null
/usr/include/stdlib.h:839:30: note: nonnull attribute specified here
SUMMARY: UndefinedBehaviorSanitizer: undefined-behavior src/graph.c:146:5 in 

> 
> ERROR: Node #1 'd' does not exist

> 
> 
> 
> 
> 
> 
> 
> ERROR: Node #2 'b' does not exist

> 
> 